# HeadFetch

./: CMakeLists.txt  CONVERSION_REPORT.md  HOOK_REPORT.md  README.md  SIGNATURE_REPORT.md  TESTING_GUIDE.md  TROUBLESHOOTING.md
.github/workflows/: build.yml
scripts/: build.sh  clean.sh
src/: config_generator.cpp  main.cpp
src/core/: Types.h
src/game/: Offsets.h
src/hooks/: HookManager.cpp  HookManager.h
src/mod/: Config.cpp  Config.h  HeadFetchMod.cpp  HeadFetchMod.h
src/net/: AvatarFetcher.h  memrchr_shim.cpp  stb_image_impl.cpp
src/signatures/: RttiScanner.h  Signatures.h
src/skin/: TextureCache.h
src/ui/: ImGuiLayer.h  TabList.h
